scale liquid phi with only positive

--- a/Vortex2D/CMakeLists.txt
+++ b/Vortex2D/CMakeLists.txt
@@ -20,6 +20,7 @@ set(LIB_SOURCES
     "Engine/LinearSolver/Diagonal.cpp"
     "Engine/LinearSolver/IncompletePoisson.cpp"
     "Engine/LinearSolver/Transfer.cpp"
+    "Engine/LinearSolver/Scale.cpp"
     "Engine/LinearSolver/Multigrid.cpp"
     "Renderer/Buffer.cpp"
     "Renderer/CommandBuffer.cpp"
@@ -63,6 +64,7 @@ set(LIB_HEADERS
     "Engine/LinearSolver/Diagonal.h"
     "Engine/LinearSolver/IncompletePoisson.h"
     "Engine/LinearSolver/Transfer.h"
+    "Engine/LinearSolver/Scale.h"
     "Engine/LinearSolver/Multigrid.h"
     "Renderer/Common.h"
     "Renderer/Drawable.h"
